Correct HTML structure and fix stylesheet link
Fix title tag and link stylesheet in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
+  <tittle> ilk web projesi</tittle>
+  <link rel="stylsheet" type="text/css" href="stil.css">
+</head>
   <body>
     <h1>Merhba Github </h1>
+    
+    
   </body>
-</head>
+
 </html>
